# MDL_Grammar_Induction

./: .gitignore  README.md  example.ipynb  grammar_models.py  plotting.py  pyproject.toml
mdl_grammar/: example.ipynb  grammar_models.py  plotting.py
